--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -23,9 +23,104 @@
   "lists": "Lists",
   "alerts": "Alerts",
   "help": "Help",
-  "searchByNameOrVoterId": "Search by name or voter id"
-
-
-
-
+  "searchByNameOrVoterId": "Search by name or voter id",
+  "boothAddres":"Booth Addres",
+  "download":"Download",
+  "share":"Share",
+  "name":"Name",
+  "age":"Age",
+  "gender":"Gender",
+  "booth":"Booth",
+  "voterId":"Voter ID",
+  "share":"Share",
+  "createAlert":"Create alert",
+  "notifications":"Notifications",
+  "deleteAll":"Delete all",
+  "notificationTitle":"Notification title",
+  "helpCentre":"Help centre",
+  "contactNumber":"Contact number",
+  "emailAddress":"E-mail address",
+  "bhandaraVidhanSabha":"Bhandara Vidhan Sabha",
+  "min":"min",
+  "max":"max",
+  "actions":"Actions",
+  "analytics":"Analytics",
+  "attachFile":"Attach file",
+  "noFileChosen":"No file chosen",
+  "attach":"Attach",
+  "selectBoothNumbere":"Select booth numbere",
+  "actions":"Actions",
+  "selectRegion":"Select Region",
+  "show_all":"Show all",
+  "syncNow":"Sync now",
+  "lastSynced":"Last synced",
+  "totalVoters":"Total voters",
+  "asOf":"As of",
+  "votersList":"Voters List",
+  "sort":"Sort",
+  "dashboard":"Dashboard",
+  "scan":"Scan",
+  "gallery":"Gallery",
+  "camera":"Camera",
+  "positive":"Positive",
+  "negative":"Negative",
+  "neutral":"Neutral",
+  "death":"Death",
+  "booth":"Booth",
+  "incharge":"Incharge",
+  "refresh":"Refresh",
+  "totalMarked":"Total marked",
+  "areYouSureYouWantToConfirm":"Are you sure you want to confirm?",
+  "electionSurvey":"Election Survey",
+  "noRouteDefined":"No route defined",
+  "syncfusionFlutterSlider":"Syncfusion Flutter Slider",
+  "changePin":"Change PIN",
+  "notifyUsers":"Notify users",
+  "trackSurvey":"Track Survey",
+  "theVotersListHasBeenUpdated":"e.g. The voters list has been updated",
+  "sendNotification":"Send notification",
+  "cancel":"Cancel",
+  "waitUntilSyncNotComplete":"Wait until sync not complete",
+  "thisWillTake7to10MinuteAndUserNeedToGoodInternetConnection":"this will take 7 to 10 minute and user need's to good internet connection",
+  "go":"GO->",
+  "selectLanguage":"Select Language",
+  "selectImageSource":"Select Image Source",
+  "chooseAnOptionToSelectAnImageFromYourGalleryOrCaptureOneUsingYourCamera":"Choose an option to select an image from your gallery or capture one using your camera.",
+  "newPin":"New PIN",
+  "setPINfor":"Set PIN for",
+  "pinChangeSuccessful":"Pin Change Successful",
+  "fileHasBeenDownoaded":"File has been downloaded",
+  "dataFetchError":"data fetch error",
+  "loginFailed":"Login Failed",
+  "sendNotificationFailed":"Send notification failed",
+  "sendNotificationSuccessful":"Send notification successful",
+  "boothInchargeSaveFailed":"booth incharge save failed",
+  "inchargeAlreadyExist":"Incharge already exist",
+  "dataFetchError":"data fetch error",
+  "inchargeCreateSuccessful":"Incharge create successful",
+  "pinChangeSuccessful":"Pin Change Successful",
+  "syncSuccessful":"Sync Successful",
+  "pleaseEnterYourMessage":"Please enter your message",
+  "surveys":"Surveys",
+  "party":"party",
+  "upload":"upload",
+  "enterBoothInChargeName":"Enter booth in-charge name",
+  "empty":"empty",
+  "enterEmail":"Enter email",
+  "re_enter_new_pin_to_confirm":"Re-enter new PIN to confirm",
+  "enterNewPIN":"Enter new PIN",
+  "karyakarta":"Karyakarta",
+  "boothIncharge":"Booth Incharge",
+  "pinChangeSuccessful":"Pin Change Successful",
+  "setPIN":"Set PIN",
+  "markVoterComponent":"Mark Voter Component",
+  "submit":"Submit",
+  "area":"Area",
+  "boothNumber":"Booth Number",
+  "region":"Region",
+  "boothInchargeName":"Booth Incharge Name",
+  "proceed":"Proceed",
+  "close":"Close",
+  "confirm":"Confirm",
+  "your_token_has_been_expire_try_to_login_again":"Your token has been expire, try to login again"
 }
