--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -1,14 +1,123 @@
 {
-    "helloWorld": "हॅलो वर्ल्ड",
-    "appTitle": "कुरुकसारथी",
-    "connectionErrorText1": "आम्ही परिणाम दाखवू शकत नाही.",
-    "connectionErrorText2": "कृपया तुमचे इंटर्न तपासा",
-    "connectionErrorText3": "कनेक्शन",
-    "retry": "पुन्हा प्रयत्न करा",
-    "noResultFound": "क्षमस्व, शोध परिणाम नाही.",
-    "helloDearVoters": "नमस्कार, प्रिय मतदाता",
-    "enterYourLoginPIN": "तुमचा लॉगिन पिन एंटर करा",
-    "login": "लॉगिन करा"
-
-
+  "helloWorld": "हॅलो वर्ल्ड",
+  "appTitle": "कुरुक्षार्थी",
+  "connectionErrorText1": "आम्हाला निकाल दर्शवता येत नाही.",
+  "connectionErrorText2": "कृपया तुमचे इंटरनेट तपासा",
+  "connectionErrorText3": "कनेक्शन",
+  "retry": "पुन्हा प्रयत्न करा",
+  "noResultFound": "क्षमस्व, कोणताही निकाल नाही.",
+  "helloDearVoters": "हॅलो, प्रिय मतदार",
+  "enterYourLoginPIN": "तुमचा लॉगिन पिन प्रविष्ट करा",
+  "login": "लॉगिन",
+  "enterYourPin": "तुमचा पिन प्रविष्ट करा",
+  "pinCodeShouldBe5digit": "पिन कोड 5 अंकी असावा",
+  "pinIsNotCorrect": "पिन बरोबर नाही",
+  "bhandaraVidhanSabha": "भंडारा विधान सभा",
+  "sakoliVidhanSabha": "साकोळी विधान सभा",
+  "tumsarVidhanSabha": "तुमसर विधान सभा",
+  "selectVidhanSabhaRegion": "विधानसभा क्षेत्र निवडा",
+  "continueBtn": "सुरू ठेवा",
+  "chooseVidhanSabha": "विधानसभा निवडा",
+  "pleaseSelectOneOption": "कृपया एक पर्याय निवडा.",
+  "home": "मुख्य पृष्ठ",
+  "lists": "सूची",
+  "alerts": "सतर्कता",
+  "help": "मदत",
+  "searchByNameOrVoterId": "नाव किंवा मतदार आयडी द्वारे शोधा",
+  "boothAddres": "बूथ पत्ता",
+  "download": "डाउनलोड",
+  "share": "शेअर करा",
+  "name": "नाव",
+  "age": "वय",
+  "gender": "लिंग",
+  "booth": "बूथ",
+  "voterId": "मतदार आयडी",
+  "createAlert": "अलर्ट तयार करा",
+  "notifications": "सूचना",
+  "deleteAll": "सर्व हटवा",
+  "notificationTitle": "सूचना शीर्षक",
+  "helpCentre": "मदत केंद्र",
+  "contactNumber": "संपर्क क्रमांक",
+  "emailAddress": "ई-मेल पत्ता",
+  "min": "किमान",
+  "max": "कमाल",
+  "actions": "कृती",
+  "analytics": "विश्लेषण",
+  "attachFile": "फाइल जोडा",
+  "noFileChosen": "कोणतीही फाइल निवडलेली नाही",
+  "attach": "जोडा",
+  "selectBoothNumbere": "बूथ क्रमांक निवडा",
+  "selectRegion": "क्षेत्र निवडा",
+  "show_all": "सर्व दाखवा",
+  "syncNow": "समक्रमित करा",
+  "lastSynced": "शेवटची समक्रमित वेळ",
+  "totalVoters": "एकूण मतदार",
+  "asOf": "च्या तारखेपासून",
+  "votersList": "मतदारांची यादी",
+  "sort": "क्रमवारी",
+  "dashboard": "डॅशबोर्ड",
+  "scan": "स्कॅन करा",
+  "gallery": "गॅलरी",
+  "camera": "कॅमेरा",
+  "electionSurvey": "निवडणूक सर्वेक्षण",
+  "positive": "सकारात्मक",
+  "negative": "नकारात्मक",
+  "neutral": "तटस्थ",
+  "death": "मृत्यू",
+  "booth": "बूथ",
+  "incharge": "प्रभारी",
+  "refresh": "रिफ्रेश करा",
+  "totalMarked": "एकूण चिन्हांकित",
+  "areYouSureYouWantToConfirm": "तुम्हाला खात्री आहे का की तुम्ही पुष्टी करु इच्छिता?",
+  "noRouteDefined": "कोणताही मार्ग परिभाषित नाही",
+  "syncfusionFlutterSlider": "सिंकफ्यूजन फ्लटर स्लायडर",
+  "changePin": "पिन बदला",
+  "notifyUsers": "वापरकर्त्यांना सूचित करा",
+  "trackSurvey": "सर्वेक्षण ट्रॅक करा",
+  "theVotersListHasBeenUpdated": "उदा. मतदार यादी अद्यतनित झाली आहे",
+  "sendNotification": "सूचना पाठवा",
+  "cancel": "रद्द करा",
+  "waitUntilSyncNotComplete": "सिंक्रोनाइझ पूर्ण होईपर्यंत प्रतीक्षा करा",
+  "thisWillTake7to10MinuteAndUserNeedToGoodInternetConnection": "यासाठी ७ ते १० मिनिटे लागतील आणि वापरकर्त्याला चांगल्या इंटरनेट कनेक्शनची गरज आहे",
+  "go":"चला->",
+  "selectLanguage": "भाषा निवडा",
+  "selectImageSource": "चित्र स्रोत निवडा",
+  "chooseAnOptionToSelectAnImageFromYourGalleryOrCaptureOneUsingYourCamera": "तुमच्या गॅलरीमधून चित्र निवडण्यासाठी किंवा कॅमेराचा वापर करून चित्र कॅप्चर करण्यासाठी एक पर्याय निवडा.",
+  "newPin": "नवीन पिन",
+  "setPINfor": "यासाठी पिन सेट करा",
+  "pinChangeSuccessful": "पिन बदल यशस्वी",
+  "fileHasBeenDownoaded": "फाइल डाउनलोड झाली आहे",
+  "dataFetchError": "डेटा आणण्यात त्रुटी",
+  "loginFailed": "लॉगिन अयशस्वी",
+  "sendNotificationFailed": "सूचना पाठवणे अयशस्वी",
+  "sendNotificationSuccessful": "सूचना यशस्वीरित्या पाठवली गेली",
+  "boothInchargeSaveFailed": "बूथ प्रभारी जतन अयशस्वी",
+  "inchargeAlreadyExist": "प्रभारी आधीच अस्तित्वात आहे",
+  "dataFetchError": "डेटा आणण्यात त्रुटी",
+  "inchargeCreateSuccessful": "प्रभारी यशस्वीरित्या तयार झाला",
+  "pinChangeSuccessful": "पिन बदल यशस्वी",
+  "syncSuccessful": "समक्रमण यशस्वी",
+  "pleaseEnterYourMessage": "कृपया तुमचा संदेश प्रविष्ट करा",
+  "surveys": "सर्वेक्षणे",
+  "party": "पक्ष",
+  "upload": "अपलोड करा",
+  "enterBoothInChargeName": "बूथ प्रभारीचे नाव प्रविष्ट करा",
+  "empty": "रिक्त",
+  "enterEmail": "ईमेल प्रविष्ट करा",
+  "re_enter_new_pin_to_confirm": "पुष्टीसाठी नवीन पिन पुन्हा प्रविष्ट करा",
+  "enterNewPIN": "नवीन पिन प्रविष्ट करा",
+  "karyakarta": "कार्यकर्ता",
+  "boothIncharge": "बूथ प्रभारी",
+  "pinChangeSuccessful": "पिन बदल यशस्वी",
+  "setPIN": "पिन सेट करा",
+  "markVoterComponent": "मतदार घटक चिन्हांकित करा",
+  "submit": "सबमिट",
+   "area": "क्षेत्र",
+   "boothNumber": "बूथ क्रमांक",
+   "region": "प्रदेश",
+   "boothInchargeName": "बूथ प्रभारीचे नाव",
+   "proceed": "सुरू करा",
+   "close": "बंद करा",
+   "confirm": "पुष्टि करा",
+   "your_token_has_been_expire_try_to_login_again": "तुमचा टोकन कालबाह्य झाला आहे, कृपया पुन्हा लॉगिन करण्याचा प्रयत्न करा"
 }
