--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -124,5 +124,8 @@
   "confirm":"Confirm",
   "your_token_has_been_expire_try_to_login_again":"Your token has been expire, try to login again",
   "authentication_failed_try_logging_in_again":"Authentication failed. Try logging in again",
-  "something_want_to_wrong_try_again":"Something went wrong, please try again."
+  "something_want_to_wrong_try_again":"Something went wrong, please try again.",
+  "create_a_new_survey_for_voters_list":"Create a new Survey for Voters List",
+  "forcePush":"Force Push"
+
 }
